2007-03-05  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* OGoContentStore/OCSiCalFieldExtractor.m ([OCSiCalFieldExtractor
	-extractQuickFieldsFromTodo:_task]): the field "ispublic" was
	renamed to "classification" and can any integer as value.
	([OCSiCalFieldExtractor -extractQuickFieldsFromEvent:_event]):
	idem.

2007-02-26  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MailPartViewers/UIxMailPartHTMLViewer.m
	([_UIxHTMLMailContentHandler -_appendStyle:_charslength:_len]):
	don't prepend anything to the class and id named. Instead, we
	make each style embedded in the ".SOGoHTMLMail-CSS-Delimiter"
	class.

2007-02-21  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoContentObject.m ([SOGoContentObject
	-rolesOfUser:logininContext:context]): if object does not exists
	(for example when it's being created), the current user has the
	same rights on it than he/she has on its parent container.

	* SoObjects/SOGo/SOGoFolder.m ([SOGoFolder
	-nameExistsInFolder:objectName]): methods that tests if a c_name
	corresponding to the name passed as parameter is present in the db
	folder.

2007-02-16  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoUser.m ([SOGoUser
	-rolesForObject:objectinContext:context]): test for
	"rolesOfUser:inContext:" in addition to "roleOfUser:...".

	* SoObjects/Appointments/SOGoCalendarComponent.m
	([SOGoCalendarComponent -rolesOfUser:logininContext:context]):
	returns the roles of the user on the container object if the event
	is uncreated.

2007-02-15  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MailPartViewers/UIxMailRenderingContext.m: returns the
	alternativeViewer a multipart/related message is being handled.

	* UI/MailPartViewers/UIxMailPartHTMLViewer.m: reimplemented module
	from scratch.

	* UI/MailPartViewers/UIxMailPartAlternativeViewer.m: select the
	text/html component before text/plain.

	* SoObjects/Mailer/SOGoMailObject.m ([SOGoMailObject